--- a/EOA-Website.html
+++ b/EOA-Website.html
@@ -105,11 +105,11 @@
 					<br/>Ngôn Ngữ: Tiếng Việt, Tiếng Anh.
 					<br/>Trạng Thái: 100%.
 					<br/>Tác Giả: AnLaVN, LeThanhDat.
-					<br><br/>Ứng dụng đã không còn được duy trì và hỗ trợ. Mọi thắc mắc vui lòng liên hệ với <a href="https://github.com/AnLaVN">AnLaVN</a>.
-					<!-- <br/><br/>Bằng việc tải xuống và sử dụng, bạn đồng ý với <a href="https://github.com/AnLaVN/EOA/blob/Releases/SERVICE.md">Điều khoản Dịch vụ</a> của chúng tôi. -->
+					<!-- <br><br/>Ứng dụng đã không còn được duy trì và hỗ trợ. Mọi thắc mắc vui lòng liên hệ với <a href="https://github.com/AnLaVN">AnLaVN</a>. -->
+					<br/><br/>Bằng việc tải xuống và sử dụng, bạn đồng ý với <a href="https://github.com/AnLaVN/EOA/blob/Releases/SERVICE.md">Điều khoản Dịch vụ</a> của chúng tôi.
 				</p>
-				<!-- <a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA_Teacher-Installer-x64.exe">Installer</a> -->
-				<!-- <a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA-Teacher-Portable.exe">Portable</a> -->
+				<a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA_Teacher-Installer-x64.exe">Installer</a>
+				<a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA-Teacher-Portable.exe">Portable</a>
 			</div>
 		</div>
 	</div>
@@ -126,11 +126,11 @@
 					<br/>Ngôn Ngữ: Tiếng Việt, Tiếng Anh.
 					<br/>Trạng Thái: 100%.D
 					<br/>Tác Giả: AnLaVN, LeThanhDat.
-					<br><br/>Ứng dụng đã không còn được duy trì và hỗ trợ. Mọi thắc mắc vui lòng liên hệ với <a href="https://github.com/AnLaVN">AnLaVN</a>.
-					<!-- <br><br/>Bằng việc tải xuống và sử dụng, bạn đồng ý với <a href="https://github.com/AnLaVN/EOA/blob/Releases/SERVICE.md">Điều khoản Dịch vụ</a> của chúng tôi. -->
+					<!-- <br><br/>Ứng dụng đã không còn được duy trì và hỗ trợ. Mọi thắc mắc vui lòng liên hệ với <a href="https://github.com/AnLaVN">AnLaVN</a>. -->
+					<br><br/>Bằng việc tải xuống và sử dụng, bạn đồng ý với <a href="https://github.com/AnLaVN/EOA/blob/Releases/SERVICE.md">Điều khoản Dịch vụ</a> của chúng tôi.
 				</p>
-				<!-- <a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA_Student-Installer-x64.exe">Installer</a> -->
-				<!-- <a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA-Student-Portable.exe">Portable</a> -->
+				<a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA_Student-Installer-x64.exe">Installer</a>
+				<a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA-Student-Portable.exe">Portable</a>
 			</div>
 		</div>
 	</div>
