--- a/EOA-Website.html
+++ b/EOA-Website.html
@@ -109,7 +109,7 @@
 					<br/><br/>Bằng việc tải xuống và sử dụng, bạn đồng ý với <a href="https://github.com/AnLaVN/EOA/blob/Releases/SERVICE.md">Điều khoản Dịch vụ</a> của chúng tôi.
 				</p>
 				<a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA_Teacher-Installer-x64.exe">Installer</a>
-				<a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA-Teacher-Portable.exe">Portable</a>
+				<a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA_Teacher-Portable.exe">Portable</a>
 			</div>
 		</div>
 	</div>
@@ -130,7 +130,7 @@
 					<br><br/>Bằng việc tải xuống và sử dụng, bạn đồng ý với <a href="https://github.com/AnLaVN/EOA/blob/Releases/SERVICE.md">Điều khoản Dịch vụ</a> của chúng tôi.
 				</p>
 				<a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA_Student-Installer-x64.exe">Installer</a>
-				<a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA-Student-Portable.exe">Portable</a>
+				<a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA_Student-Portable.exe">Portable</a>
 			</div>
 		</div>
 	</div>
