--- a/EOA-Website.html
+++ b/EOA-Website.html
@@ -106,7 +106,7 @@
 					<br/>Trạng Thái: 100%.
 					<br/>Tác Giả: AnLaVN, LeThanhDat.
 					<!-- <br><br/>Ứng dụng đã không còn được duy trì và hỗ trợ. Mọi thắc mắc vui lòng liên hệ với <a href="https://github.com/AnLaVN">AnLaVN</a>. -->
-					<br/><br/>Bằng việc tải xuống và sử dụng, bạn đồng ý với <a href="https://github.com/AnLaVN/EOA/blob/Releases/SERVICE.md">Điều khoản Dịch vụ</a> của chúng tôi.
+					<br/><br/>Bằng việc tải xuống và sử dụng, bạn đồng ý với <a href="https://anlavn.github.io/EOA/SERVICE">Điều khoản Dịch vụ</a> của chúng tôi.
 				</p>
 				<a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA_Teacher-Installer-x64.exe">Installer</a>
 				<a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA_Teacher-Portable.exe">Portable</a>
@@ -127,7 +127,7 @@
 					<br/>Trạng Thái: 100%.D
 					<br/>Tác Giả: AnLaVN, LeThanhDat.
 					<!-- <br><br/>Ứng dụng đã không còn được duy trì và hỗ trợ. Mọi thắc mắc vui lòng liên hệ với <a href="https://github.com/AnLaVN">AnLaVN</a>. -->
-					<br><br/>Bằng việc tải xuống và sử dụng, bạn đồng ý với <a href="https://github.com/AnLaVN/EOA/blob/Releases/SERVICE.md">Điều khoản Dịch vụ</a> của chúng tôi.
+					<br><br/>Bằng việc tải xuống và sử dụng, bạn đồng ý với <a href="https://anlavn.github.io/EOA/SERVICE">Điều khoản Dịch vụ</a> của chúng tôi.
 				</p>
 				<a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA_Student-Installer-x64.exe">Installer</a>
 				<a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA_Student-Portable.exe">Portable</a>
