--- a/EOA-Website.html
+++ b/EOA-Website.html
@@ -100,7 +100,7 @@
 				<h3>Teacher</h3>
 				<p>Ứng dụng quản lí sinh viên, bài thi, buổi kiểm tra, thống kê điểm, dành cho giảng viên.<br/>
 					<br/>Hệ Điều Hành: Window 10 64 bit trở lên.
-					<br/>Phiên Bản: v2.7.105.8
+					<br/>Phiên Bản: v2.7.105.9
 					<br/>Dung Lượng: 175 ~ 184 MB.
 					<br/>Ngôn Ngữ: Tiếng Việt, Tiếng Anh.
 					<br/>Trạng Thái: 100%.
@@ -109,7 +109,7 @@
 					<br/><br/>Bằng việc tải xuống và sử dụng, bạn đồng ý với <a href="https://anlavn.github.io/EOA/SERVICE">Điều khoản Dịch vụ</a> của chúng tôi.
 				</p>
 				<a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA_Teacher-Installer-x64.exe">Installer</a>
-				<a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA_Teacher-Portable.exe">Portable</a>
+				<a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA_Teacher-Portable.rar">Portable</a>
 			</div>
 		</div>
 	</div>
@@ -121,7 +121,7 @@
 				<h3>Student</h3>
 				<p>Ứng dụng tham gia kiểm tra dành cho học sinh, sinh viên. Sử dụng công nghệ nhận dạng khuôn mặt.<br/>
 					<br/>Hệ Điều Hành: Window 10 64 bit trở lên.
-					<br/>Phiên Bản: v2.7.56.8
+					<br/>Phiên Bản: v2.7.56.9
 					<br/>Dung Lượng: 282 ~ 307 MB.
 					<br/>Ngôn Ngữ: Tiếng Việt, Tiếng Anh.
 					<br/>Trạng Thái: 100%.D
@@ -130,7 +130,7 @@
 					<br><br/>Bằng việc tải xuống và sử dụng, bạn đồng ý với <a href="https://anlavn.github.io/EOA/SERVICE">Điều khoản Dịch vụ</a> của chúng tôi.
 				</p>
 				<a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA_Student-Installer-x64.exe">Installer</a>
-				<a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA_Student-Portable.exe">Portable</a>
+				<a href="https://github.com/AnLaVN/EOA/releases/download/v2.7/EOA_Student-Portable.rar">Portable</a>
 			</div>
 		</div>
 	</div>
