--- a/EOA-Website.html
+++ b/EOA-Website.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="https://res.cloudinary.com/anlavn/image/upload/v1669111552/EOA/Logo_cvxsi3.png" type="image/x-icon"/>
+	<link rel="icon" href="https://raw.githubusercontent.com/AnLaVN/EOA/Releases/EOA-Build/Logo.png" type="image/x-icon"/>
 	<title>EOA - Download</title>
 </head>
 <script>
