--- a/EOA-Website.html
+++ b/EOA-Website.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="https://raw.githubusercontent.com/AnLaVN/EOA/Releases/EOA-Build/Logo.png" type="image/x-icon"/>
+	<link rel="icon" href="https://res.cloudinary.com/anlavn/image/upload/v1669111552/EOA/Logo_cvxsi3.png" type="image/x-icon"/>
 	<title>EOA - Download</title>
 </head>
 <script>
@@ -89,10 +89,9 @@
 			<span style="--i:17;"></span>
 			<span style="--i:13;"></span>
 			<span style="--i:28;"></span>
-
-			
 		</div>
 	</div>
+
 	<div class="homeCard">
 		<div class="homeBox">
 			<div class="homeContent">
@@ -170,6 +169,23 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="homeCard">
+		<div class="homeBox">
+			<div class="homeContent">
+				<h2>EOA</h2>
+				<h3>Dịch vụ gửi mail</h3>
+				<br>
+				<p>
+					Dịch vụ gửi mail có thể bị nhầm lẫn là Spam<br><br>
+					Email có thể mất vài phút để đến với bạn<br><br>
+					Kiểm tra thư mục Spam nếu không thấy email<br><br>
+					Nếu bạn vẫn không thể nhận được email từ chúng tôi, hãy liên hệ với <a href="https://github.com/AnLaVN">AnLaVN</a>
+				</p>
+			</div>
+		</div>
+	</div>
+
 	<div class="containerBox" id="count" style="width: 100%; justify-content: center;">
 		<div class="text" style="--j:0;">
 			<span style="--i:0;" id="visits0">2</span>
