--- a/EOA-Website.html
+++ b/EOA-Website.html
@@ -123,7 +123,7 @@
 					<br/>Phiên Bản: v2.7.56.9
 					<br/>Dung Lượng: 282 ~ 307 MB.
 					<br/>Ngôn Ngữ: Tiếng Việt, Tiếng Anh.
-					<br/>Trạng Thái: 100%.D
+					<br/>Trạng Thái: 100%.
 					<br/>Tác Giả: AnLaVN, LeThanhDat.
 					<!-- <br><br/>Ứng dụng đã không còn được duy trì và hỗ trợ. Mọi thắc mắc vui lòng liên hệ với <a href="https://github.com/AnLaVN">AnLaVN</a>. -->
 					<br><br/>Bằng việc tải xuống và sử dụng, bạn đồng ý với <a href="https://anlavn.github.io/EOA/SERVICE">Điều khoản Dịch vụ</a> của chúng tôi.
