--- a/EOA-Website.html
+++ b/EOA-Website.html
@@ -176,11 +176,11 @@
 				<h2>EOA</h2>
 				<h3>Dịch vụ gửi mail</h3>
 				<br>
-				<p>
-					Dịch vụ gửi mail có thể bị nhầm lẫn là Spam<br><br>
-					Email có thể mất vài phút để đến với bạn<br><br>
-					Kiểm tra thư mục Spam nếu không thấy email<br><br>
-					Nếu bạn vẫn không thể nhận được email từ chúng tôi, hãy liên hệ với <a href="https://github.com/AnLaVN">AnLaVN</a>
+				<p>Các thông tin quan trọng về dịch vụ gửi mail.<br/>
+					<br><br>Dịch vụ gửi mail có thể bị nhầm lẫn là Spam
+					<br><br>Email có thể mất vài phút để đến với bạn
+					<br><br>Kiểm tra thư mục Spam nếu không thấy email
+					<br><br>Nếu bạn vẫn không thể nhận được email từ chúng tôi, hãy liên hệ với <a href="https://github.com/AnLaVN">AnLaVN</a>
 				</p>
 			</div>
 		</div>
